<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_home"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
    <item
            android:id="@+id/navigation_explore"
            android:enabled="true"
            android:icon="@drawable/ic_explore"
            android:title="@string/explore"/>
    <item
            android:id="@+id/navigation_create"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/create"/>
    <item
            android:id="@+id/navigation_collections"
            android:enabled="true"
            android:icon="@drawable/ic_bookmark_filled"
            android:title="@string/collections"/>
    <item
            android:id="@+id/navigation_account"
            android:enabled="true"
            android:icon="@drawable/ic_account"
            android:title="@string/account"/>
</menu>