<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_round_corners"
    android:backgroundTint="@color/white">

    <Button
        android:id="@+id/about_back_button"
        style="@style/transparentButton"
        android:foregroundTint="@color/black"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="30dp"
        android:foreground="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_margin="48dp">

            <TextView
                android:id="@+id/about_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/about"
                android:textSize="20sp"
                android:textStyle="italic"
                android:gravity="center"
                android:scrollbars="vertical"
                android:elevation="30dp"/>
            <TextView
                android:id="@+id/about_txt_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/github"
                android:textSize="20sp"
                android:textStyle="italic"
                android:gravity="center"
                android:scrollbars="vertical"
                android:elevation="30dp"/>
            <TextView
                android:id="@+id/about_txt_tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/black"
                android:text="@string/tools_used"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:scrollbars="vertical"
                android:elevation="30dp"/>

            <TextView
                android:id="@+id/about_android_studio_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/android_studio"
                android:textSize="20sp"
                android:gravity="center"
                android:scrollbars="vertical"
                android:elevation="30dp"/>
            <TextView
                android:id="@+id/about_firebase_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/firebase"
                android:textSize="20sp"
                android:gravity="center"
                android:scrollbars="vertical"
                android:elevation="30dp"/>
            <TextView
                android:id="@+id/about_swipe_reveal_layout_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/swipe_reveal_layout"
                android:textSize="20sp"
                android:gravity="center"
                android:scrollbars="vertical"
                android:elevation="30dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>